0.3.0 (unreleased)
------------------

- Modernized dependencies, replacing `failure` with `anyhow` in the binary and `thiserror` in the library
- 2018 edition is required
- Assorted code quality improvements, as per clippy suggestions
- CLI building is now disabled by default, use `cli` feature to enable

0.2.0 (12-05-2018)
------------------

- Considerably faster training
- Smaller models because data that doesn't affect the result is removed during training
- Model saving and loading functions take AsRef<Path> for convenience
- Quotes, dashes and parentheses are now considered word separators as well
- Truecasing sentence fragments (phrases) is now supported
- First letters of sentences are experimentally assumed to be capitalized
- CLI tool now properly reports errors instead of panicing
- CLI tool accepts stdin for input for training


0.1.0 (13-01-2018)
------------------

Initial release.